@@ -1,27 +1,0 @@
-%%BeginResource: procset hpgltops 1.1 0
-%
-% "$Id$"
-%
-%   HP-GL/2 filter procset for the Common UNIX Printing System (CUPS).
-%
-%   This procset contains the basic drawing commands that are used to
-%   reduce output size.  Note the 'MP' (make newpath) definition - this
-%   should be called 'NP' (newpath), but GhostScript uses the 'NP' name
-%   for 'noaccess put' in some of its font files...
-%
-%   Copyright 2007 by Apple Inc.
-%   Copyright 1993-2005 by Easy Software Products
-%
-%   These coded instructions, statements, and computer programs are the
-%   property of Apple Inc. and are protected by Federal copyright law.
-%   Distribution and use rights are outlined in the file "LICENSE.txt"
-%   which is included with the CUPS source distribution.
-%
-/MO { moveto } bind def
-/LI { lineto } bind def
-/FI { fill } bind def
-/ST { stroke } bind def
-/CP { closepath } bind def
-/MP { newpath } bind def
-/SP { setlinewidth setrgbcolor } bind def
-%%EndResource
